--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title> Vishwanathan's personal website</title>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -39,7 +41,7 @@
       <li>Comedy</li>
       <li>Crime</li>
     </ul>
-    <li><a href="fav.html">Favourites</a></li>
+    <li><a href="D:\learn\Full stack web developing - Udemy\testing outs\My basic website\fav.html">Favourites</a></li>
     </li>
   </ul>
 
@@ -115,16 +117,22 @@
     </tr>
   </table>
   <hr>
-  <h3><strong><u>Social profiles</u></strong></h3>
-  <ul>
-    <li><a href="https://www.facebook.com/Vish.V27">facebook</a> </li>
-    <li><a href="https://www.instagram.com/vishhh_27/">instagram</a> </li>
-  </ul>
-  <hr>
-</body>
-<a href="cntct.html">
+<img class="heart" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/241/red-heart_2764.png"  alt="heart1-img">
+<img class="bike" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/joypixels/239/motorcycle_1f3cd.png" height="100" width="120" alt="Cbr-img">
+<img class="heart" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/241/red-heart_2764.png"  alt="heart2-img">
+
+<hr>
+
+<h3><strong><u>Social profiles</u></strong></h3>
+<ul>
+  <li><a href="https://www.facebook.com/Vish.V27">facebook</a> </li>
+  <li><a href="https://www.instagram.com/vishhh_27/">instagram</a> </li>
+</ul>
+<hr>
+
+<a href="D:\learn\Full stack web developing - Udemy\testing outs\My basic website\cntct.html">
   <h3><strong><u> Contact info</u> </strong> </h3>
 </a>
 <hr>
-
+</body>
 </html>
