--- a/cntct.html
+++ b/cntct.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Contact me</title>
+  <title>Contact Me</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -12,7 +13,8 @@
     <li>Phone number: 9876543210</li>
     <li>Email: Vishwanathan@email.com</li>
   </ul>
-
+<hr>
+<br>
   <form action="mailto:vishwanathan.venkataraman27@gmail.com" method="post">
     <label>Your name: </label>
     <input type="text" name="name" value="">
