--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <li>Comedy</li>
       <li>Crime</li>
     </ul>
-    <li><a href="D:\learn\Full stack web developing - Udemy\testing outs\My basic website\fav.html">Favourites</a></li>
+    <li><a href="fav.html">Favourites</a></li>
     </li>
   </ul>
 
@@ -130,7 +130,7 @@
 </ul>
 <hr>
 
-<a href="D:\learn\Full stack web developing - Udemy\testing outs\My basic website\cntct.html">
+<a href="cntct.html">
   <h3><strong><u> Contact info</u> </strong> </h3>
 </a>
 <hr>
