--- a/index.html
+++ b/index.html
@@ -116,9 +116,11 @@
       </td>
     </tr>
   </table>
-  <hr>
+  <hr> 
 <img class="heart" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/241/red-heart_2764.png"  alt="heart1-img">
+<img class="heart" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/whatsapp/238/panda-face_1f43c.png"  alt="panda1-img">
 <img class="bike" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/joypixels/239/motorcycle_1f3cd.png" height="100" width="120" alt="Cbr-img">
+<img class="heart" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/whatsapp/238/panda-face_1f43c.png"  alt="panda2-img">
 <img class="heart" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/241/red-heart_2764.png"  alt="heart2-img">
 
 <hr>
