--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <center>
+  /***<center>***/
     <table cellspacing="25">
       <tr>
         <td><img
@@ -27,7 +27,7 @@
     </table>
 
     <hr>
-  </center>
+ /*** </center>***/
   <h3><strong> <u> Hobbies</u> </strong></h3>
 
   <ul>
