--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  
+  <center>
     <table cellspacing="25">
       <tr>
         <td><img
@@ -136,5 +136,6 @@
   <h3><strong><u> Contact info</u> </strong> </h3>
 </a>
 <hr>
+  </center>
 </body>
 </html>
